--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -1,4 +1,4 @@
-\chapter{Implementación}\label{cap: }
+\chapter{Implementación del sistema IoT}\label{cap: }
 
 \addcontentsline{toc}{section}{Introducción}
         \textbf{\Large Introducción}\newline
