--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -22,9 +22,9 @@
     
     La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.\\
 
-    Se asume como \textbf{problema de investigación: }la inexistencia de un sistema de monitoreo para el control del estado de conservación de las piezas en la muestra Prat Puig imposibilitando el control en tiempo real por parte de los especialistas; por lo que se definde entonces como \textbf{objeto de la investigación}, los sistemas de supervisión y monitoreo de piezas de arte basados en IoT.\\\\\\
+    Se asume como \textbf{problema de investigación: }la inexistencia de un sistema de monitoreo para el control del estado de conservación de las piezas en la muestra Prat Puig imposibilitando el control en tiempo real por parte de los especialistas; por lo que se definde entonces como \textbf{objeto de la investigación}, los sistemas de supervisión y monitoreo de piezas de arte basados en IoT.\\
     
-    \textbf{Campo de acción: }Diseño e implementación de sistemas basados en el empleo del Internet de las Cosas en los museos. El \textbf{objetivo}...\\
+    \textbf{Campo de acción: }Diseño e implementación de sistemas basados en el empleo del Internet de las Cosas en los museos. El \textbf{objetivo}...
 
     \textbf{Hipótesis: }Si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en un museo, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración en dicho local correspondiente a la muestra Prat Puig, estaríamos extendiendo la vigencia de estos objetos y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
 
@@ -40,7 +40,7 @@
 
     \textbf{Aporte de la investigación: } un sistema de supervisión y monitoreo basado en IoT para el control del estado de conservación de los objetos de la muestra.\\
 
-    \textbf{Organización del documento: }El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.\\\\\\
+    \textbf{Organización del documento: }El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
 
     En el Capítulo I se hace un análisis de la trascendencia del IoT en los museos internacionales y en los museos de nuestro País.
     Se hace además un análisis de las arquitecturas propuestas por otros autores y se propone una para el desarrollo del proyecto.
