3 de mayo 6:00pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -130,7 +130,29 @@
         \label{imag:nodemcu}
     \end{figure}
 
-    ...
+    NodeMCU es una pequeña placa Wifi compatible con Arduino lista para usar en cualquier proyecto IoT. Está montada alrededor del microcontrolador ESP8266 y expone todos sus pines en los laterales. Además, ofrece más ventajas como la incorporación de un regulador de tensión integrado, así como un puerto USB de programación. Se puede programar con LUA o mediante el IDE de Arduino.\\
+    Dispone de una extensa comunidad y documentación que permitirá conectar el proyecto mediante conexión Wifi.\\
+
+    \textbf{Características}
+    \begin{itemize}
+        \item Procesador: ESP8266 @ 80MHz (3.3V) (ESP-12E).
+        \item 4MB de memoria FLASH (32 MBit).
+        \item WiFi 802.11 b/g/n.
+        \item Regulador 3.3V integrado (500mA).
+        \item Conversor USB-Serial CH340G / CH340G.
+        \item Función Auto-reset.
+        \item 9 pines GPIO con I2C y SPI.
+        \item 1 entrada analógica (1.0V max).
+        \item 4 agujeros de montaje (3mm).
+        \item Pulsador de RESET.
+        \item Entrada alimentación externa VIN (20V max).\\
+    \end{itemize}
+
+    En el caso de los sensores...\\
+    \textbf{Hacer Tabla con características de los sensores a emplear}\\
+    Alimentación …
+
+
 
 
 
