--- a/ref.bib
+++ b/ref.bib
@@ -330,5 +330,17 @@ Internet of things CISCO
   year            = {2022},
   doi             = {10.1109/TLA.2022.9662173}
 }
-%IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey
 
+@article{cari2020diseno,
+  title={Dise{\~n}o de una arquitectura de ciberseguridad para los servicios de plataformas IoT en el {\'a}rea de TI dentro de la empresa Pac{\'\i}fico Seguros},
+  author={Cari Arevalo, Marcelo and Lombardi S{\'a}nchez, Julissa Antonella},
+  year={2020},
+  publisher={Universidad Tecnol{\'o}gica del Per{\'u}}
+}
+
+@inproceedings{mazzeo2018sistema,
+  title={Sistema de comunicaci{\'o}n para la implementaci{\'o}n de redes inal{\'a}mbricas de sensores},
+  author={Mazzeo, H{\'e}ctor Hugo and Rapallini, Jos{\'e} Antonio and Rodr{\'\i}guez, Omar E and Zabaljauregui, Marcelo},
+  booktitle={XX Workshop de Investigadores en Ciencias de la Computaci{\'o}n (WICC 2018, Universidad Nacional del Nordeste).},
+  year={2018}
+}
