3 de mayo 8:30pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -148,7 +148,7 @@
         \item Entrada alimentación externa VIN (20V max).\\
     \end{itemize}
 
-    En el caso de los sensores...\\
+    En el caso de los sensores....\\
     \textbf{Hacer Tabla con características de los sensores a emplear}\\
     Alimentación …
 
