--- a/tesis.tex
+++ b/tesis.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,12pt, openany]{report}
 \usepackage[spanish,es-tabla]{babel}
+\usepackage{multirow}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
