6 de mayo 4:50pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -192,7 +192,7 @@
     El procesamiento de toda la data...
     
     \subsection{Capa de aplicación}
-    Pantalla TFT y Realidad Aumentada...\\\\\\\\
+    Pantalla TFT y Realidad Aumentada...\\
 
 
     \begin{figure}[h]
