--- a/ref.bib
+++ b/ref.bib
@@ -281,7 +281,7 @@ Internet of things CISCO
   author          = {Dave Evans},
   title           = {How the Next Evolution of the Internet Is Changing Everything.},
   volume          = {Cisco Internet of Things White Paper},
-  year            = {2012},
+  year            = {2012}
 }
 
 %Cuales son las arquitecturas y componentes de una res IoT
