--- a/capitulos/resumen.tex
+++ b/capitulos/resumen.tex
@@ -2,7 +2,6 @@
     \section*{Resumen}\label{sec: resumen}
 \end{center}
 
-El presente Trabajo de Diploma trata el proceso de diseño e instalación de un sistema de monitoreo y visualización de variables para el control del estado de conservación de las piezas pertenecientes a la muestra ubicada en el Centro Cultural Francisco Prat Puig. Se tratan generalidades sobre la aplicación del Iot en museos a nivel internacional y en Cuba. Se realiza una caracterización de los sensores a emplear acorde a las variables presentes, así como el montaje de un sistema de seguridad.\\
-En concordancia con las características del lugar se efectúa el montaje de dicho sistema facilitando el control del estado de las piezas y propiciándole al usuario los datos necesarios para la toma de decisiones ante futuros eventos de deterioro para la conservación por tiempo prolongado de dicha muestra.\\
-Este sistema puede ser empleado en posteriores proyectos que relacionen el control de variables existentes en un emplazamiento, facilitando la supervisión de los objetos y la alerta temprana en caso de posibles afectaciones. 
- 
+El presente Trabajo de Diploma trata el proceso de diseño e instalación de un sistema de monitoreo y visualización de las variables para el control del estado de conservación de las piezas pertenecientes a la muestra Prat Puig ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba. Se tratan generalidades sobre la aplicación del Iot en museos a nivel internacional y en Cuba. Se realiza una caracterización de los sensores a emplear para el control, así como el montaje de un sistema de seguridad.
+
+En concordancia con las características del lugar se efectúa el montaje de dicho sistema facilitando el control del estado de las piezas y propiciándole a los especialistas del centro los datos necesarios para la toma de decisiones ante futuros eventos de. Este sistema puede ser empleado en posteriores proyectos relacionados con la supervisión de objetos, facilitando la visualización del estado de los mismos y la alerta temprana en caso de posibles afectaciones.
